<resources>
    <string name="app_name">Deep Jass</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="description_logo">Logo</string>
    <string name="playButtonText">PLAY</string>
    <string name="settingsButtonText">SETTINGS</string>
    <string name="bckImg">Background Image</string>
    <string name="mainTitle">Deep Jass</string>
    <string name="mainCaption">by Marc, Michael, Ramon &amp; Simon</string>
    <string name="valTitle"> Card Validation </string>
    <string name="valCaption"> Are these your cards? </string>
    <string name="continueBtnText"> Continue </string>
    <string name="rescanText">Scan Again </string>
    <string name="cardVal"> Card </string>

</resources>
